--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
         </div>
        </div>
-    
+      <p class="bottom-link"><a href="https://github.com/evernow19/weatherApp" target="_blank" color="white">This code made by </a> Inna Kyfor</p>
       <script src="https://kit.fontawesome.com/10686f6f91.js" crossorigin="anonymous"></script>
       <script src="script.js"></script>
     </body>
